--- a/data/style.css
+++ b/data/style.css
@@ -1,6 +1,13 @@
 body, html {
  background-color:#E9F0F0;
 }
+.pop-up {
+ z-index:111;
+ background-color:#fff;
+ box-shadow:0 12px 15px rgba(0, 0, 0, 0.4);
+ padding:20px;
+ position:absolute;
+}
 
 /* Setup */
 input:invalid {
