В default скине теперь температура и данные с аналогового выхода показываются в динамических графиках. Сортируя по модулям или местонахождению теперь меняет url ссылка, таким образом можно сразу открывать нужные вам модули или комнаты. Теперь в response можно добавлять url пример: "response":"page.htm?setup"

--- a/dev_data/css/style.css
+++ b/dev_data/css/style.css
@@ -172,6 +172,10 @@ ul#history {
  height:90%;
 }
 
+.index .col-md-6 {
+ min-height: 390px;
+}
+
 .opt-img, .popup-img, .refresh-img, .help-img, .warning-img, .set-img, .download-img {
  display:inline-block;
  width:16px;
